--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,11 +1,11 @@
 {
-    "extension_name": {
-      "message": "HashChrome: Instant, private, multilingual grammar checker",
-      "description": "The name of the extension"
-    },
-    "extension_description": {
-      "message": "Instantly enhance your WhatsApp & Slack chats with private, secure, multilingual grammar checking powered by ChatGPT & Gemini.",
-      "description": "The description of the extension"
-    }
-    
+  "extension_name": {
+    "message": "HashChrome: AI-Powered Multilingual Grammar Checker",
+    "description": "The name of the extension"
+  },
+  "extension_description": {
+    "message": "Instantly proofread your grammar mistakes across the web.",
+    "description": "The description of the extension"
   }
+  
+}
