Localize popup.html
Make `popup.html` multi-locals by replacing hardcoded text with `__MSG_` placeholders and adding corresponding localized messages to `_locales` JSON files.

* **Localized Messages**:
  - Add localized messages for `popup.html` in `_locales/ar/messages.json`, `_locales/de/messages.json`, `_locales/en/messages.json`, `_locales/es/messages.json`, `_locales/fr/messages.json`, `_locales/id/messages.json`, `_locales/ja/messages.json`, `_locales/pt/messages.json`, `_locales/ru/messages.json`, `_locales/tr/messages.json`, and `_locales/zh/messages.json`.

* **Update `popup.html`**:
  - Replace hardcoded text with `__MSG_` placeholders for title, input label, save button, check button, remove button, usage instructions, usage steps, and link text.

* **Update `manifest.json`**:
  - Add localization for `popup.html` using `__MSG_` placeholders.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/sazaktechs/hashchrome?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -6,6 +6,45 @@
     "extension_description": {
       "message": "Revisa al instante tus errores gramaticales en la web.",
       "description": "La descripción de la extensión"
+    },
+    "popup_title": {
+      "message": "Corrector Gramatical Instantáneo",
+      "description": "Título del popup"
+    },
+    "popup_input_label": {
+      "message": "Tu clave API de OpenAI o Gemini",
+      "description": "Etiqueta para el campo de entrada en el popup"
+    },
+    "popup_save_button": {
+      "message": "Guardar clave API",
+      "description": "Botón para guardar la clave API en el popup"
+    },
+    "popup_check_button": {
+      "message": "Estado de la clave API",
+      "description": "Botón para verificar el estado de la clave API en el popup"
+    },
+    "popup_remove_button": {
+      "message": "Eliminar clave API",
+      "description": "Botón para eliminar la clave API en el popup"
+    },
+    "popup_usage_instructions": {
+      "message": "Cómo corregir",
+      "description": "Instrucciones de uso en el popup"
+    },
+    "popup_usage_step1": {
+      "message": "Guarda tu clave API.",
+      "description": "Primer paso en las instrucciones de uso"
+    },
+    "popup_usage_step2": {
+      "message": "Escribe tu mensaje.",
+      "description": "Segundo paso en las instrucciones de uso"
+    },
+    "popup_usage_step3": {
+      "message": "Presiona Ctrl+Shift+K (Mac: Cmd+Shift+K) o haz clic derecho y elige 'Corregir'.",
+      "description": "Tercer paso en las instrucciones de uso"
+    },
+    "popup_link_text": {
+      "message": "¿Cómo puedo obtener una clave API?",
+      "description": "Texto del enlace en el popup"
     }
   }
-  
